adding files and basic styling as well as basic image background and photo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,10 @@
-<h1>Nick Richards</h1>
+<link rel="stylesheet" href="../public/css/styles.css">
+
+
+<div class="mainContent">
+    
+    <h1>Welcome to CSE Motors!</h1>
+    <img src="/images/vehicles/delorean.jpg" alt="hub-cap" class="image5">
+    <p>Delorean Upgrades</p>
+    <p>DMC Delorean Reviews</p>
+</div>
