--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
 <nav>
     <ul>
-        <li>Home</li>
-        <li>Custom</li>
-        <li>Sedan</li>
-        <li>SUV</li>
-        <li>Truck</li>
+        <li> <a href="#home">Home</a></li>
+        <li> <a href="#custom">Custom</a></li>
+        <li> <a href="#sedan">Sedan</a></li>
+        <li> <a href="#suv">SUV </a></li>
+        <li> <a href="#truck">Truck</a></li>
     </ul>
 </nav>
