--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,65 @@
 *:after {
   box-sizing: border-box;
 }
+
+/* main body */
+body  {
+  /* background-image: url(../images/site/checkerboard.jpg); */
+  background-image: url(../images/vehicles/aerocar.jpg);
+
+}
+
+
+/* page content */
+#wrapper  {
+  display: block;
+  margin: auto;
+  width: 70%;
+  background-color: white;
+  border: 4px solid #05afd3;
+  border-radius: 8px;
+}
+
+/* big title */
+.siteName {
+        font-size: 2rem;
+        color: #242432;
+    }
+
+.siteName a {
+  text-decoration: none;
+}
+
+#tools {
+  text-align: right;
+}
+
+
+/* navigation bar */
+
+nav {
+  text-align: center;
+  background-color: #242432;
+}
+
+ul {
+  /* display: block; */
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+  padding: 12px;
+  
+}
+
+li a {
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  padding: 8px;
+  color: white;
+  /* background-color: #242432; */
+}
+
