--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,6 +2,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><% title %> | CSE 340 App</title>
+    <title>
+        <% title %> | CSE 340 App
+    </title>
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+    </style>
 </head>
