adding containers and trying to get things aligned better taking a break and doing some other assignment

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,27 @@
 
 
 <div class="mainContent">
-    
-    <h1>Welcome to CSE Motors!</h1>
-    <img src="/images/vehicles/delorean.jpg" alt="hub-cap" class="image5">
-    <p>Delorean Upgrades</p>
-    <p>DMC Delorean Reviews</p>
+<p>Welcome to CSE Motors!</p>
+<div class="mainContainer">
+    <div class="heroMainContainer">
+
+        <img src="/images/vehicles/delorean.jpg" alt="hub-cap" class="image5">
+
+        <div class="heroCard">
+            <p>DMC Delorean</p>
+            <p>3 Cup holders</p>
+            <p>Superman doors</p>
+            <p>Fuzzy dice!</p>
+            <button class="heroButton" type="button">Own Today</button>
+        </div>
+    </div>
+    <div class="heroUpgrades">
+        <p>Delorean Upgrades</p>
+    </div>
+    <div class="heroReviews">
+        <p>DMC Delorean Reviews</p>
+    </div>
+
+</div>
+
 </div>
