--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,55 @@ body  {
   border-radius: 8px;
 }
 
+.mainContainer {
+  display: grid;
+  margin: auto;
+  width: 70%;
+  border: 4px solid gray;
+
+}
+
+
+.heroMainContainer {
+  /* position: fixed; */
+  order: 0;
+  /* display: block; */
+  text-align: center;
+  /* width: inherit; */
+  object-fit: contain;
+
+  /* min-height: auto;
+  min-width: auto; */
+}
+
+.heroMainContainer img {
+  order: 1;
+  position: inherit;
+  display: block;
+  object-fit: cover;
+  margin: 0 auto;
+  border: 4px solid magenta;
+}
+
+.heroCard {
+  position: relative;
+  z-index: 2;
+  bottom: 6%;
+  right: 72%;
+  width: 209px;
+  border: 8px solid blue;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.heroUpgrades {
+  border: 4px solid green;
+  grid-row: 2;
+}
+.heroReviews {
+  border: 4px solid red;
+  grid-row: 2;
+}
+
 /* big title */
 .siteName {
         font-size: 2rem;
