--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header id="top-header">
-    <span class="siteName">
+    <div class="siteName">
         <h1><a href="/" title="Return to home page">CSE Motors</a></h1>
-    </span>
+    </div>
     <div id="tools">
         <a title="Click to log in" href="/account/login">My Account</a>
     </div>
