working on baseline containers with broken mediaquery

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,20 @@
 <link rel="stylesheet" href="../public/css/styles.css">
 
 
-<div class="mainContent">
 <p>Welcome to CSE Motors!</p>
+<div class="mainContent">
 <div class="mainContainer">
     <div class="heroMainContainer">
 
         <img src="/images/vehicles/delorean.jpg" alt="hub-cap" class="image5">
 
-        <div class="heroCard">
+        <!-- <div class="heroCard">
             <p>DMC Delorean</p>
             <p>3 Cup holders</p>
             <p>Superman doors</p>
             <p>Fuzzy dice!</p>
             <button class="heroButton" type="button">Own Today</button>
-        </div>
+        </div> -->
     </div>
     <div class="heroUpgrades">
         <p>Delorean Upgrades</p>
