--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,33 +23,42 @@ body  {
   border-radius: 8px;
 }
 
+.mainContent {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 100vh;
+}
+
 .mainContainer {
   display: grid;
-  margin: auto;
-  width: 70%;
+  grid-template-rows: auto auto;
+  grid-gap: 20px;
+  max-width: 100%;
   border: 4px solid gray;
-
 }
+
+/* broken for now */
+/* larger than x pixles */
+@media (min-width: 768px) {
+  #mainContainer {
+    grid-template-columns: 1fr 1fr; /* Two columns */
+    grid-template-rows: auto auto; /* Single auto-sized row */
+    text-align: initial; /* Reset text alignment */
+  }
 
 
 .heroMainContainer {
-  /* position: fixed; */
-  order: 0;
-  /* display: block; */
+  padding: 20px;
+  grid-column: span 2;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  /* width: inherit; */
-  object-fit: contain;
-
-  /* min-height: auto;
-  min-width: auto; */
 }
 
 .heroMainContainer img {
-  order: 1;
-  position: inherit;
-  display: block;
-  object-fit: cover;
-  margin: 0 auto;
+  grid-column: span 2;
+  padding: 20px;
   border: 4px solid magenta;
 }
 
@@ -66,10 +75,14 @@ body  {
 .heroUpgrades {
   border: 4px solid green;
   grid-row: 2;
+  grid-column: 1;
+  padding: 20px;
 }
 .heroReviews {
   border: 4px solid red;
   grid-row: 2;
+  grid-column: 2;
+  padding: 20px;
 }
 
 /* big title */
