--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,9 +18,28 @@
     </div>
     <div class="heroUpgrades">
         <p>Delorean Upgrades</p>
+        <div class="imageUpgrade">
+            <img src="images/upgrades/bumper_sticker.jpg" alt="car sticker">
+        </div>
+        <div class="imageUpgrade">
+            <img src="images/upgrades/flame.jpg" alt="picture of fire">
+        </div>
+        <div class="imageUpgrade">
+            <img src="images/upgrades/flux-cap.png" alt="picture of flux capacitor">
+        </div>
+        <div class="imageUpgrade">
+            <img src="images/upgrades/hub-cap.jpg" alt="picture of hub cap">
+        </div>
     </div>
     <div class="heroReviews">
         <p>DMC Delorean Reviews</p>
+        <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road."(4/5)</li>
+            <li>"I'm feeling McFly!"(4/5)</li>
+            <li>"The most futuristic ride of our day."(4.5/5)</li>
+            <li>"80's livin and I love it!"(5/5)</li>
+        </ul>
     </div>
 
 </div>
