--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,27 +8,12 @@
 
         <img src="/images/vehicles/delorean.jpg" alt="hub-cap" class="image5">
 
-        <!-- <div class="heroCard">
+        <div class="heroCard">
             <p>DMC Delorean</p>
             <p>3 Cup holders</p>
             <p>Superman doors</p>
             <p>Fuzzy dice!</p>
             <button class="heroButton" type="button">Own Today</button>
-        </div> -->
-    </div>
-    <div class="heroUpgrades">
-        <p>Delorean Upgrades</p>
-        <div class="imageUpgrade">
-            <img src="images/upgrades/bumper_sticker.jpg" alt="car sticker">
-        </div>
-        <div class="imageUpgrade">
-            <img src="images/upgrades/flame.jpg" alt="picture of fire">
-        </div>
-        <div class="imageUpgrade">
-            <img src="images/upgrades/flux-cap.png" alt="picture of flux capacitor">
-        </div>
-        <div class="imageUpgrade">
-            <img src="images/upgrades/hub-cap.jpg" alt="picture of hub cap">
         </div>
     </div>
     <div class="heroReviews">
@@ -40,6 +25,27 @@
             <li>"The most futuristic ride of our day."(4.5/5)</li>
             <li>"80's livin and I love it!"(5/5)</li>
         </ul>
+    </div>
+    <div class="heroUpgrades">
+        <div class="subTitle">
+            <p>Delorean Upgrades</p>
+        </div>
+        <div class="imageUpgrade">
+            <img src="images/upgrades/bumper_sticker.jpg" alt="car sticker">
+            <p>test caption</p>
+        </div>
+        <div class="imageUpgrade">
+            <img src="images/upgrades/flame.jpg" alt="picture of fire">
+            <p>test caption</p>
+        </div>
+        <div class="imageUpgrade">
+            <img src="images/upgrades/flux-cap.png" alt="picture of flux capacitor">
+            <p>test caption</p>
+        </div>
+        <div class="imageUpgrade">
+            <img src="images/upgrades/hub-cap.jpg" alt="picture of hub cap">
+            <p>test caption</p>
+        </div>
     </div>
 
 </div>
