--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div class="heroReviews">
+        div
         <p>DMC Delorean Reviews</p>
         <ul>
             <li>"So fast it's almost like traveling in time." (4/5)</li>
