--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
 <nav>
     <ul>
-        <li> <a href="#home">Home</a></li>
-        <li> <a href="#custom">Custom</a></li>
-        <li> <a href="#sedan">Sedan</a></li>
-        <li> <a href="#suv">SUV </a></li>
-        <li> <a href="#truck">Truck</a></li>
+        <li> <a href="#">Home</a></li>
+        <li> <a href="#">Custom</a></li>
+        <li> <a href="#">Sedan</a></li>
+        <li> <a href="#">SUV </a></li>
+        <li> <a href="#">Truck</a></li>
     </ul>
 </nav>
