worked on vh for main root element

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../public/css/styles.css">
 
 
-<p>Welcome to CSE Motors!</p>
+<h2>Welcome to CSE Motors!</h2>
 <div class="mainContent">
 <div class="mainContainer">
     <div class="heroMainContainer">
@@ -9,16 +9,17 @@
         <img src="/images/vehicles/delorean.jpg" alt="hub-cap" class="image5">
 
         <div class="heroCard">
-            <p>DMC Delorean</p>
-            <p>3 Cup holders</p>
-            <p>Superman doors</p>
-            <p>Fuzzy dice!</p>
+            <h3>DMC Delorean</h3>
+            <ul>
+                <li>3 Cup holders</li>
+                <li>Superman doors</li>
+                <li>Fuzzy dice!</li>
+            </ul>
             <button class="heroButton" type="button">Own Today</button>
         </div>
     </div>
     <div class="heroReviews">
-        div
-        <p>DMC Delorean Reviews</p>
+        <h3>DMC Delorean Reviews</h3>
         <ul>
             <li>"So fast it's almost like traveling in time." (4/5)</li>
             <li>"Coolest ride on the road."(4/5)</li>
@@ -29,23 +30,23 @@
     </div>
     <div class="heroUpgrades">
         <div class="subTitle">
-            <p>Delorean Upgrades</p>
+            <h3>Delorean Upgrades</h3>
         </div>
         <div class="imageUpgrade">
             <img src="images/upgrades/bumper_sticker.jpg" alt="car sticker">
-            <p>test caption</p>
+            <p>Bumper Sticker</p>
         </div>
         <div class="imageUpgrade">
             <img src="images/upgrades/flame.jpg" alt="picture of fire">
-            <p>test caption</p>
+            <p>Flame Decals</p>
         </div>
         <div class="imageUpgrade">
             <img src="images/upgrades/flux-cap.png" alt="picture of flux capacitor">
-            <p>test caption</p>
+            <p>Flux Capacitor</p>
         </div>
         <div class="imageUpgrade">
             <img src="images/upgrades/hub-cap.jpg" alt="picture of hub cap">
-            <p>test caption</p>
+            <p>Hub Caps</p>
         </div>
     </div>
 
