--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,15 +19,20 @@ body {
   margin: auto;
   width: 100%;
   background-color: white;
-  border: 4px solid #05afd3;
+
   border-radius: 8px;
+}
+#wrapper > main > p {
+  font-size: 2em;
+  font-weight: bold;
 }
 
 .mainContent {
+  border: 4px solid blue;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  height: 75vh;
+  height: auto;
 }
 
 .mainContainer {
@@ -36,12 +41,13 @@ body {
   grid-template-columns: 1fr;
   grid-gap: 20px;
   max-width: 100%;
-  border: 4px solid gray;
+
 }
 
 
 
 .heroMainContainer {
+  background-color: lightgray;
   position: relative;
   padding: 20px;
   grid-column: span 2;
@@ -54,28 +60,29 @@ body {
   position: relative;
   grid-column: span 2;
   padding: 20px;
-  border: 4px solid magenta;
+
 
   width: 100%;
 }
 
 .heroCard {
-  font-size: 10px;
+  display: list-item;
+  font-size: 14px;
+  list-style-type: none;
   position: absolute;
-  top: 22%;
-  left: -12%;
-  width: 200px;
-  border: 8px solid blue;
-  background-color: rgba(255, 255, 255, 0.3);
+  top: 11%;
+  left: -7%;
+  width: 162px;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .heroUpgrades {
+  background-color: lightgray;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* Example grid with 2 columns */
+  /* grid 2 columns */
   gap: 10px;
-  /* Adjust the gap between items as needed */
-  border: 4px solid green;
+  /*  gap between items */
   grid-row: 2;
   grid-column: 1;
   padding: 20px;
@@ -100,16 +107,10 @@ body {
 }
 
 .heroReviews {
-  border: 4px solid red;
+  background-color: lightgray;
   grid-row: 2;
   grid-column: 2;
   padding: 20px;
-}
-
-.heroReviews>ul>li {
-  display: list-item;
-  list-style-type: disc;
-  font-size: 20px;
 }
 
 /* big title */
@@ -173,13 +174,26 @@ li a {
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     max-width: 100%;
-    border: 4px solid gray;
   }
 
   .heroCard {
     font-size: 22px;
     top: 16%;
     left: 6%;
+    width: 209px;
+  }
+
+  .heroReviews {
+    font-size: 22px;
+  }
+
+}
+
+@media (min-width: 768px) {
+  .heroCard {
+    font-size: 22px;
+    top: 19%;
+    left: 7%;
     width: 209px;
   }
 
