--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,7 +47,7 @@ body {
 
 
 .heroMainContainer {
-  background-color: lightgray;
+  background-color: white;
   position: relative;
   padding: 20px;
   grid-column: span 2;
@@ -77,7 +77,7 @@ body {
 }
 
 .heroUpgrades {
-  background-color: lightgray;
+  background-color: white;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   /* grid 2 columns */
@@ -107,7 +107,7 @@ body {
 }
 
 .heroReviews {
-  background-color: lightgray;
+  background-color: white;
   grid-row: 2;
   grid-column: 2;
   padding: 20px;
