--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,15 +27,23 @@ body {
   font-weight: bold;
 }
 
-.mainContent {
+/* .mainContent {
   border: 4px solid blue;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   height: auto;
-}
+} */
 
 .mainContainer {
+  border: 4px solid blue;
+  /* display: flex; */
+  justify-content: center;
+  align-items: flex-start;
+  height: auto;
+
+
+
   display: block;
   grid-template-rows: auto;
   grid-template-columns: 1fr;
@@ -162,11 +170,10 @@ li a {
   }
 
   .mainContainer {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    text-align: initial;
+    /* grid-template-columns: 1fr 1fr; */
+    /* grid-template-rows: auto auto; */
   }
-
+  
   .mainContainer {
     /* one column */
     display: grid;
@@ -174,6 +181,7 @@ li a {
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     max-width: 100%;
+    text-align: initial;
   }
 
   .heroCard {
