--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,7 +5,7 @@
     <title>
         <% title %> | CSE 340 App
     </title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" media="screen" href="/css/styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
     </style>
