added a bunch of code for the view model and error messages

--- a/views/inventory/vehicle.ejs
+++ b/views/inventory/vehicle.ejs
@@ -6,7 +6,7 @@
     <% } else { res.redirect('/') } %>
 
         <!-- message section -->
-        <!-- <%#= messages() %> -->
+        <%#=messages() %>
 
-        <!-- inventory items display -->
-        <%- grid %>
+            <!-- inventory items display -->
+            <%- grid %>
