--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -6,3 +6,5 @@
     <% } else { res.redirect('/') } %>
 
         <%=message %>
+            <!-- Image by storyset on Freepik -->
+            <a><img class="errImage" src="/images/site/404Camp.jpg" alt="picture of fire"></a>
