--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,7 @@
     <title>
         <% title %> | CSE 340 App
     </title>
+    <link rel="icon" type="image/icon" href="/images/site/favicon-32x32.png">
     <link rel="stylesheet" media="screen" href="/css/styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
