--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,46 +1,47 @@
 <h2>Welcome to CSE Motors!</h2>
-<div class="mainContainer">
-    <div class="heroMainContainer">
-        <img src="/images/vehicles/delorean.jpg" alt="hub-cap" class="image5">
-        <div class="heroCard">
-            <h3>DMC Delorean</h3>
+<%- messages() %>
+    <div class="mainContainer">
+        <div class="heroMainContainer">
+            <img src="/images/vehicles/delorean.jpg" alt="hub-cap" class="image5">
+            <div class="heroCard">
+                <h3>DMC Delorean</h3>
+                <ul>
+                    <li>3 Cup holders</li>
+                    <li>Superman doors</li>
+                    <li>Fuzzy dice!</li>
+                </ul>
+                <button class="heroButton" type="button">Own Today</button>
+            </div>
+        </div>
+        <div class="heroReviews">
+            <h3>DMC Delorean Reviews</h3>
             <ul>
-                <li>3 Cup holders</li>
-                <li>Superman doors</li>
-                <li>Fuzzy dice!</li>
+                <li>"So fast it's almost like traveling in time." (4/5)</li>
+                <li>"Coolest ride on the road."(4/5)</li>
+                <li>"I'm feeling McFly!"(4/5)</li>
+                <li>"The most futuristic ride of our day."(4.5/5)</li>
+                <li>"80's livin and I love it!"(5/5)</li>
             </ul>
-            <button class="heroButton" type="button">Own Today</button>
+        </div>
+        <div class="heroUpgrades">
+            <div class="subTitle">
+                <h3>Delorean Upgrades</h3>
+            </div>
+            <div class="imageUpgrade">
+                <img src="images/upgrades/bumper_sticker.jpg" alt="car sticker">
+                <p>Bumper Sticker</p>
+            </div>
+            <div class="imageUpgrade">
+                <img src="images/upgrades/flame.jpg" alt="picture of fire">
+                <p>Flame Decals</p>
+            </div>
+            <div class="imageUpgrade">
+                <img src="images/upgrades/flux-cap.png" alt="picture of flux capacitor">
+                <p>Flux Capacitor</p>
+            </div>
+            <div class="imageUpgrade">
+                <img src="images/upgrades/hub-cap.jpg" alt="picture of hub cap">
+                <p>Hub Caps</p>
+            </div>
         </div>
     </div>
-    <div class="heroReviews">
-        <h3>DMC Delorean Reviews</h3>
-        <ul>
-            <li>"So fast it's almost like traveling in time." (4/5)</li>
-            <li>"Coolest ride on the road."(4/5)</li>
-            <li>"I'm feeling McFly!"(4/5)</li>
-            <li>"The most futuristic ride of our day."(4.5/5)</li>
-            <li>"80's livin and I love it!"(5/5)</li>
-        </ul>
-    </div>
-    <div class="heroUpgrades">
-        <div class="subTitle">
-            <h3>Delorean Upgrades</h3>
-        </div>
-        <div class="imageUpgrade">
-            <img src="images/upgrades/bumper_sticker.jpg" alt="car sticker">
-            <p>Bumper Sticker</p>
-        </div>
-        <div class="imageUpgrade">
-            <img src="images/upgrades/flame.jpg" alt="picture of fire">
-            <p>Flame Decals</p>
-        </div>
-        <div class="imageUpgrade">
-            <img src="images/upgrades/flux-cap.png" alt="picture of flux capacitor">
-            <p>Flux Capacitor</p>
-        </div>
-        <div class="imageUpgrade">
-            <img src="images/upgrades/hub-cap.jpg" alt="picture of hub cap">
-            <p>Hub Caps</p>
-        </div>
-    </div>
-</div>
