--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -4,7 +4,7 @@
         <%=title %>
     </h1>
     <% } else { res.redirect('/') } %>
-        <form class="loginForm Form" action="login" method="post">
+        <form class="loginForm Form" action="/account/register" method="post">
             <div class="loginFields fields">
                 <label for="name"><b>First name</b></label>
                 <input type="account_firstname" placeholder="Enter first name" name="account_firstname" required>
