--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -7,17 +7,20 @@
         <form class="loginForm Form" action="/account/register" method="post">
             <div class="loginFields fields">
                 <label for="name"><b>First name</b></label>
-                <input type="account_firstname" placeholder="Enter first name" name="account_firstname" required>
+                <input type="text" placeholder="Enter first name" name="account_firstname" required>
 
                 <label for="name"><b>Last name</b></label>
-                <input type="account_lastname" placeholder="Enter last name" name="account_lastname" required>
+                <input type="text" placeholder="Enter last name" name="account_lastname" required>
 
                 <label for="email"><b>Email address</b></label>
-                <input type="account_email" placeholder="Enter Email" name="account_email" required>
+                <input type="email" placeholder="Enter Email" name="account_email" required>
 
 
-                <label for="psw"><b>Password</b></label>
-                <input type="account_password" placeholder="Enter Password" name="account_password" required>
+                <label for="accountPassword"><b>Password</b></label><span>There must be at least 12 characters, one must
+                    be a number, one must be a lowercase letter, one must be a capital letter, and one must be a
+                    non-alphanumeric character.</span>
+                <input id="accountPassword" type="password" placeholder="Enter Password" name="account_password"
+                    required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
 
                 <button type="submit">Register</button>
             </div>
