--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -32,3 +32,12 @@
 
 
         <%- messages() %>
+            <% if (errors) { %>
+                <ul class="notice">
+                    <% errors.array().forEach(error=> { %>
+                        <li>
+                            <%= error.msg %>
+                        </li>
+                        <% }) %>
+                </ul>
+                <% } %>
