--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -3,9 +3,45 @@
         <%=title %>
     </h1>
     <% } else { res.redirect('/') } %>
+    <form class="inventoryForm Form" action="inventory" method="post">
+        <div class="inventoryForm form">
+            <label for="id"><b>ID</b></label>
+            <input type="text" placeholder="Enter inventory ID" name="inv_id" required value="<%= locals.inv_id%>" >
     
-        
-    <!--change this-->
-    <%- addInventory %> 
+            <label for="make"><b>Make</b></label>
+            <input type="text" placeholder="Min of 3 characters" name="inv_make" required value="<%= locals.inv_make %>" >
+    
+            <label for="model"><b>Model</b></label>
+            <input type="text" placeholder="Min of 3 characters" name="inv_model" required value="<%= locals.inv_model %>" >
+            
+            <label for="year"><b>Year</b></label>
+            <input type="text" placeholder="4-digit year" name="inv_year" required value="<%= locals.inv_year %>" >
+    
+            <!-- come back to the description -->
+            <textarea for="description">Description</textarea>
+            <input type="text" name="inv_description" required value="<%= locals.inv_description%>" >
+    
+            <!-- come back to image -->
+            <label for="image"><b>Image Path</b></label>
+            <input type="text" placeholder="/images/vehicles/imageExample.png" name="inv_image" required>
+    
+            <label for="thumbnail"><b>Thumbnail Path</b></label>
+            <input type="text" placeholder="/images/vehicles/thumbnail.png" name="inv_thumbnail" required>
+    
+            <label for="price"><b>Price</b></label>
+            <input type="number" placeholder="decimal or integer" name="inv_price" required value="<%= locals.inv_price%>" >
+    
+            <label for="miles"><b>Miles</b></label>
+            <input type="number" placeholder="decimal or integer" name="inv_miles" required value="<%= locals.inv_miles%>" >
+    
+            <label for="color"><b>Color</b></label>
+            <input type="text" placeholder="enter color" name="inv_color" required value="<%= locals.inv_color%>" >
+    
+            <label for="classificationID"><b>Classification</b></label>
+            <input type="text" placeholder="enter classification id" name="classification_id" required>
+    
+            <button type="submit"> Submit Inventory </button>
+        </div>
+      </form>
 
         <%- messages() %>
