--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -5,8 +5,15 @@
     <% } else { res.redirect('/') } %>
     <form class="inventoryForm Form" action="inventory" method="post">
         <div class="inventoryForm form">
-            <label for="id"><b>ID</b></label>
-            <input type="text" placeholder="Enter inventory ID" name="inv_id" required value="<%= locals.inv_id%>" >
+            <label for="modelSelect"><b>Choose a Classification</b></label>
+            <select id="modelSelect" name="classification_id">
+                <% classData.forEach(classification=> { %>
+                    <option value="<%= classification.id %>"
+                        selected="<%= classification.id === locals.classification_id ? 'selected' : '' %>">
+                        <%= classification.name %>
+                    </option>
+                    <% }); %>
+            </select>
     
             <label for="make"><b>Make</b></label>
             <input type="text" placeholder="Min of 3 characters" name="inv_make" required value="<%= locals.inv_make %>" >
