--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -4,9 +4,18 @@
         <%=title %>
     </h1>
     <% } else { res.redirect('/') } %>
-    
-        
-    <!--change this-->
-    <%- addClassificationView %> 
 
-        <%- messages() %>
+
+        <!--change this-->
+        <%- addClassificationView %>
+
+            <%- messages() %>
+                <% if (errors) { %>
+                    <ul class="notice">
+                        <% errors.array().forEach(error=> { %>
+                            <li>
+                                <%= error.msg %>
+                            </li>
+                            <% }) %>
+                    </ul>
+                    <% } %>
