added form in css and changed order in controller for classification

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -219,7 +219,7 @@ li a {
   width: 50%;
 }
 
-.loginForm {
+.loginForm, .Form {
   background-color: lightblue;
   padding: 40px;
   display: flex;
