--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -232,6 +232,10 @@ li a {
   display: inherit;
   flex-direction: inherit;
 }
+.form > label, select, input, textarea {
+  margin: 10px;
+  width: 100%;
+}
 
 /* inside query is a large view */
 @media only screen and (min-width: 768px) {
