--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -16,35 +16,37 @@
                 </select>
 
                 <label for="make"><b>Make</b></label>
-                <input type="text" placeholder="Min of 3 characters" name="inv_make" required
+                <input type="text" placeholder="Min of 3 characters" minlength="3" name="inv_make" required
                     value="<%= locals.inv_make %>">
 
                 <label for="model"><b>Model</b></label>
-                <input type="text" placeholder="Min of 3 characters" name="inv_model" required
+                <input type="text" placeholder="Min of 3 characters" minlength="3" name="inv_model" required
                     value="<%= locals.inv_model %>">
 
                 <label for="year"><b>Year</b></label>
-                <input type="text" placeholder="4-digit year" name="inv_year" required value="<%= locals.inv_year %>">
+                <input type="text" placeholder="4-digit year" minlength="4" name="inv_year" required
+                    value="<%= locals.inv_year %>">
 
                 <!-- come back to the description -->
-                <textarea for="description">Description</textarea>
-                <input type="text" name="inv_description" required value="<%= locals.inv_description%>">
+                <label for="description">Description</label>
+                <textarea id="description" name="inv_description" required
+                    value="<%= locals.inv_description%>"></textarea>
 
                 <!-- come back to image -->
                 <label for="image"><b>Image Path</b></label>
                 <input type="text" placeholder="/images/vehicles/imageExample.png" name="inv_image" required
-                    value="<%= locals.inv_image%>">
+                    value="/images/vehicles/no-image.png">
 
                 <label for="thumbnail"><b>Thumbnail Path</b></label>
                 <input type="text" placeholder="/images/vehicles/thumbnail.png" name="inv_thumbnail" required
-                    value="<%= locals.inv_thumbnail%>">
+                    value="/images/vehicles/no-image-tn.png">
 
                 <label for="price"><b>Price</b></label>
-                <input type="number" placeholder="decimal or integer" name="inv_price" required
+                <input type="number" min="0" step=".01" placeholder="decimal or integer" name="inv_price" required
                     value="<%= locals.inv_price%>">
 
                 <label for="miles"><b>Miles</b></label>
-                <input type="number" placeholder="decimal or integer" name="inv_miles" required
+                <input type="number" min="0" step="0" placeholder="integer" name="inv_miles" required
                     value="<%= locals.inv_miles%>">
 
                 <label for="color"><b>Color</b></label>
