select inv items assignment

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -11,3 +11,19 @@
                 <li><a href="/inv/add-class">Add Classification</a></li>
                 <li><a href="/inv/add-inv">Add Inventory</a></li>
             </ul>
+            <h2>Manage Inventory</h2>
+            <p>select a classification from the list.</p>
+
+            <select id="classificationList" name="classification_id">
+                <% classData.forEach(classification=> { %>
+                    <option value="<%= classification.id %>" <% if(classification.id==locals.classification_id){ %>
+                        selected <% } %> >
+                            <%= classification.name %>
+                    </option>
+                    <% }); %>
+            </select>
+
+            <table id="inventoryDisplay"></table>
+            <noscript>JavaScript must be enabled to use this page.</noscript>
+
+            <script src="../../js/inventory.js"></script>
