worked on task 1 with showing logout when user is logged in

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,16 @@
         <h1><a href="/" title="Return to home page">CSE Motors</a></h1>
     </div>
     <div id="tools">
-        <a title="Click to log in" href="/account/login">My Account</a>
+        <% if (locals.loggedin) { %>
+            <% if (locals.accountData) { %>
+                <span>Welcome, <%= accountData.username %></span>
+                <a title="Click to log out" href="/account/logout">Logout</a>
+                <% } else { %>
+                    <span> Welcome, User</span>
+                    <a title="Click to log out" href="/account/logout">Logout</a>
+                    <% } %>
+                        <% } else { %>
+                            <a title="Click to log in" href="/account/login">My Account</a>
+                            <% } %>
     </div>
 </header>
