added more style to page and added updateView

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,11 +5,12 @@
     <div id="tools">
         <% if (locals.loggedin) { %>
             <% if (locals.accountData) { %>
-                <span>Welcome, <%= accountData.username %></span>
-                <a title="Click to log out" href="/account/logout">Logout</a>
+                <span><a href="https://developer.mozilla.org/en-US/">Welcome</a>, <%= accountData.account_firstname %>
+                </span>
+                <a title="Click to log out" href="/account/logout"> Logout</a>
                 <% } else { %>
                     <span> Welcome, User</span>
-                    <a title="Click to log out" href="/account/logout">Logout</a>
+                    <a title="Click to log out" href="/account/logout"> Logout</a>
                     <% } %>
                         <% } else { %>
                             <a title="Click to log in" href="/account/login">My Account</a>
