--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,17 +15,22 @@ body {
 
 /* page content */
 #wrapper {
-  display: block;
   margin: auto;
   width: 100%;
   background-color: white;
-
   border-radius: 8px;
+  border-width: thick;
+  border-style: solid;
+  border-color: yellowgreen;
 }
 
 #wrapper>main>p {
   font-size: 2em;
   font-weight: bold;
+}
+
+#wrapper>main>h1 { 
+  text-align: center;
 }
 
 /* .mainContent {
@@ -36,8 +41,15 @@ body {
   height: auto;
 } */
 
+#top-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 .mainContainer {
-  border: 4px solid blue;
+  border: 4px solid rgb(109, 109, 111);
   /* display: flex; */
   justify-content: center;
   align-items: flex-start;
@@ -132,8 +144,14 @@ body {
   text-decoration: none;
 }
 
+.siteName h1 {
+  margin: 5px;
+}
+
 #tools {
-  text-align: right;
+  padding: 10px 0;
+  margin: auto 15px;
+  font-size: larger;
 }
 
 
@@ -217,6 +235,7 @@ li a {
   margin: auto;
   height: 50%;
   width: 50%;
+  padding: 20px;
 }
 
 .loginForm, .Form {
@@ -238,6 +257,11 @@ li a {
 .form > label, select, input, textarea {
   margin: 10px;
   width: 100%;
+}
+
+footer {
+  padding: 15px;
+  text-align: center;
 }
 
 /* inside query is a large view */
