adding update to account and password and added account access

--- a/views/account/account.ejs
+++ b/views/account/account.ejs
@@ -4,7 +4,12 @@
         <%=title %>
     </h1>
     <% } else { res.redirect('/') } %>
-        <p>You're logged in</p>
-
-
-        <%- messages() %>
+        <h2>Welcome <%= accountData.account_firstname %>
+        </h2>
+        <p><a href="/account/updateAccount/<%= locals.accountData.account_id %>">update account
+                information</a></p>
+        <% if (locals.accountData.account_type!=="Client" ) { %>
+            <h3>Inventory Management</h3>
+            <p> <a href="/inv/">Access Inventory Management</a> </p>
+            <% } %>
+                <%- messages() %>
