--- a/views/account/updateView.ejs
+++ b/views/account/updateView.ejs
@@ -9,15 +9,16 @@
             <div class="loginFields fields">
 
                 <label for="account_firstname"><b>Update firstname</b></label>
-                <input value="<%= locals.account_firstname %>" type="text" name="account_firstname" required>
+                <input value="<%= locals.accountData.account_firstname %>" type="text" name="account_firstname"
+                    required>
 
                 <label for="account_lastname"><b>Update lastname</b></label>
-                <input value="<%= locals.account_lastname %>" type="text" name="account_lastname" required>
+                <input value="<%= locals.accountData.account_lastname %>" type="text" name="account_lastname" required>
 
                 <label for="account_email"><b>Update email</b></label>
-                <input value="<%= locals.account_email %>" type="email" name="account_email" required>
+                <input value="<%= locals.accountData.account_email %>" type="email" name="account_email" required>
 
-                <input type="hidden" value="<%= locals.account_id %>" name="account_id">
+                <input type="hidden" value="<%= locals.accountData.account_id %>" name="account_id">
                 <button type="submit">update account info</button>
             </div>
 
@@ -36,7 +37,7 @@
                     non-alphanumeric character.</span>
                 <input type="password" name="account_password" required
                     pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
-                <input type="hidden" value="<%= locals.account_id %>" name="account_id">
+                <input type="hidden" value="<%= locals.accountData.account_id %>" name="account_id">
                 <button type="submit">update password</button>
             </div>
         </form>
