--- a/views/account/updateView.ejs
+++ b/views/account/updateView.ejs
@@ -4,43 +4,55 @@
         <%=title %>
     </h1>
     <% } else { res.redirect('/') } %>
-        <!-- firstname, lastname, email -->
-        <form class="loginForm Form" action="/account/updateAccount" method="post">
-            <div class="loginFields fields">
+        <% if (errors) { %>
+            <ul class="notice">
+                <% errors.array().forEach(error=> { %>
+                    <li>
+                        <%= error.msg %>
+                    </li>
+                    <% }) %>
+            </ul>
+            <% } %>
+                <%- messages() %>
 
-                <label for="account_firstname"><b>Update firstname</b></label>
-                <input value="<%= locals.accountData.account_firstname %>" type="text" name="account_firstname"
-                    required>
+                    <!-- firstname, lastname, email -->
+                    <form class="loginForm Form" action="/account/updateAccount" method="post">
+                        <div class="loginFields fields">
 
-                <label for="account_lastname"><b>Update lastname</b></label>
-                <input value="<%= locals.accountData.account_lastname %>" type="text" name="account_lastname" required>
+                            <label for="account_firstname"><b>Update firstname</b></label>
+                            <input value="<%= locals.accountData.account_firstname %>" type="text"
+                                name="account_firstname" required>
 
-                <label for="account_email"><b>Update email</b></label>
-                <input value="<%= locals.accountData.account_email %>" type="email" name="account_email" required>
+                            <label for="account_lastname"><b>Update lastname</b></label>
+                            <input value="<%= locals.accountData.account_lastname %>" type="text"
+                                name="account_lastname" required>
 
-                <input type="hidden" value="<%= locals.accountData.account_id %>" name="account_id">
-                <button type="submit">update account info</button>
-            </div>
+                            <label for="account_email"><b>Update email</b></label>
+                            <input value="<%= locals.accountData.account_email %>" type="email" name="account_email"
+                                required>
 
-            <div class="container" style="background-color:#f1f1f1">
-                <span class="accnt">No account? <a href="/account/registration">Sign-up</a></span>
-            </div>
-        </form>
+                            <input type="hidden" value="<%= locals.accountData.account_id %>" name="account_id">
+                            <button type="submit">update account info</button>
+                        </div>
 
-        <!-- password -->
-        <form class="loginForm Form" action="/account/updatePassword" method="post">
-            <div class="loginFields fields">
-                <label for="accountPassword"><b>Update Password</b></label>
-                <span>There must be at least 12 characters,
-                    one must be a number, one must be a lowercase letter, one must be a capital letter, and one must be
-                    a
-                    non-alphanumeric character.</span>
-                <input type="password" name="account_password" required
-                    pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
-                <input type="hidden" value="<%= locals.accountData.account_id %>" name="account_id">
-                <button type="submit">update password</button>
-            </div>
-        </form>
+                        <div class="container" style="background-color:#f1f1f1">
+                            <span class="accnt">No account? <a href="/account/registration">Sign-up</a></span>
+                        </div>
+                    </form>
 
-
-        <%- messages() %>
+                    <!-- password -->
+                    <form class="loginForm Form" action="/account/updatePassword" method="post">
+                        <div class="loginFields fields">
+                            <label for="accountPassword"><b>Update Password</b></label>
+                            <span>There must be at least 12 characters,
+                                one must be a number, one must be a lowercase letter, one must be a capital letter, and
+                                one
+                                must be
+                                a
+                                non-alphanumeric character.</span>
+                            <input type="password" name="account_password" required
+                                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+                            <input type="hidden" value="<%= locals.accountData.account_id %>" name="account_id">
+                            <button type="submit">update password</button>
+                        </div>
+                    </form>
